# third_party_kanto

./: .gitmodules  BUILD.gn  BUILD.py  Dockerfile  LICENSE  README.md  bundle.json  ohos_policy-add-selinux-policy.patch
init/: config.json  hosts  kanto.cfg
paho-mqtt/: BUILD.gn
paho-mqtt/include/: VersionInfo.h
services/: README.md  kanto-system-ability-definition.patch
services/kanto/: BUILD.gn
services/kanto/include/: if_kanto_service.h  kanto_hilog.h  kanto_service.h  kanto_service_ipc_interface_code.h  kanto_service_stub.h
services/kanto/src/: kanto_service.cpp  kanto_service_stub.cpp
services/profile/: 8100.json  BUILD.gn
