
action("suite-connector") {
    script = "BUILD.py"
    outputs = ["$target_out_dir/suite-connector"]
    outputPath = rebase_path("$target_out_dir")
    inputPath = rebase_path("./suite-connector/cmd/connector")
    args = ["--target-os=linux", "--target-arch=$target_cpu", "--output=$outputPath", "--input=$inputPath", "--result=suite-connector"]
}

copy("iothub-crt") {
    sources = ["./suite-connector/cmd/connector/iothub.crt"]
    outputs = ["$target_out_dir/iothub.crt"]
}
