# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

action("build-suite-connector") {
    script = "BUILD.py"
    outputPath = rebase_path("$target_out_dir")
    inputPath = rebase_path("./suite-connector/cmd/connector")
    resultName = "suite-connector"
    args = ["--target-os=linux", "--target-arch=$target_cpu", "--output=$outputPath", "--input=$inputPath", "--result=$resultName"]
    outputs = ["$target_out_dir/${resultName}"]
}

copy("copy-iothub-crt") {
    sources = ["./suite-connector/cmd/connector/iothub.crt"]
    outputs = ["$target_out_dir/iothub.crt"]
}

ohos_prebuilt_executable("suite-connector") {
    install_enable = true
    deps = ["//third_party/kanto:build-suite-connector"]
    part_name = "kanto"
    subsystem_name = "thirdparty"
    source = "$target_out_dir/suite-connector"
}

ohos_prebuilt_etc("iothub-crt") {
    install_enable = true
    deps = ["//third_party/kanto:copy-iothub-crt"]
    part_name = "kanto"
    subsystem_name = "thirdparty"
    source = "$target_out_dir/iothub.crt"
    relative_install_dir = "suite-connector"
}

ohos_prebuilt_etc("config.json") {
    install_enable = true
    part_name = "kanto"
    subsystem_name = "thirdparty"
    source = "init/config.json"
    relative_install_dir = "suite-connector"
}

ohos_prebuilt_etc("etc_hosts") {
    install_enable = true
    part_name = "kanto"
    subsystem_name = "thirdparty"
    source = "init/hosts"
}

ohos_prebuilt_etc("kanto_init") {
  source = "init/kanto.cfg"
  deps = [":config.json", ":etc_hosts"]
  relative_install_dir = "init"
  part_name = "kanto"
  subsystem_name = "thirdparty"
}
