# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libpaho_mqtt_config") {
  cflags = [
    "-Wall",
    "-fexceptions",
    "-Wno-error"
  ]
  cflags_cc = cflags
}

ohos_static_library("libpaho_mqtt_cpp") {
  sources = [
    "paho.mqtt.cpp/src/async_client.cpp",
    "paho.mqtt.cpp/src/client.cpp",
    "paho.mqtt.cpp/src/connect_options.cpp",
    "paho.mqtt.cpp/src/create_options.cpp",
    "paho.mqtt.cpp/src/disconnect_options.cpp",
    "paho.mqtt.cpp/src/iclient_persistence.cpp",
    "paho.mqtt.cpp/src/message.cpp",
    "paho.mqtt.cpp/src/properties.cpp",
    "paho.mqtt.cpp/src/response_options.cpp",
    "paho.mqtt.cpp/src/ssl_options.cpp",
    "paho.mqtt.cpp/src/string_collection.cpp",
    "paho.mqtt.cpp/src/subscribe_options.cpp",
    "paho.mqtt.cpp/src/token.cpp",
    "paho.mqtt.cpp/src/topic.cpp",
    "paho.mqtt.cpp/src/will_options.cpp",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTTime.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTProtocolClient.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Clients.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/utf-8.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTPacket.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTPacketOut.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Messages.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Tree.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Socket.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTPersistence.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Thread.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTProtocolOut.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTPersistenceDefault.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/SocketBuffer.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/LinkedList.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTProperties.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTReasonCodes.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Base64.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/SHA1.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTAsync.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/MQTTAsyncUtils.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/StackTrace.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Heap.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/WebSocket.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Log.c",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src/Proxy.c"
  ]

  include_dirs = [
    "include",
    "paho.mqtt.cpp/src",
    "paho.mqtt.cpp/src/externals/paho-mqtt-c/src"   
  ]

  public_configs = [ ":libpaho_mqtt_config" ]

  part_name = "kanto"
  subsystem_name = "thirdparty"

}
