# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("kanto_system_ability") {

  sources = [
    "src/kanto_service.cpp",
    "src/kanto_service_stub.cpp"
  ]

  include_dirs = [
    "include"
  ]

  deps = [

  ]
  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils"
  ]

  part_name = "kanto"
  subsystem_name = "thirdparty"
}
